--- a/index.html
+++ b/index.html
@@ -809,9 +809,20 @@
           <h2 class="h2 article-title">Cases</h2>
         </header>
         <section class="business-cases-content">
-          <figure style="margin: 1.5em 0; text-align: center;">
-            <img src="./assets/images/zomato.png" alt="Zomato Logo" style="max-width: 220px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.08);">
-          </figure>
+          <!-- About Zomato -->
+          <div style="width: 100%; box-sizing: border-box;"></div>
+          <div style="margin-bottom:2em;">
+            <h2 class="h2" style="margin-top:1em;">About Zomato</h2> <br>
+            <p class="timeline-text" style="margin-left:1.5em;">
+              <strong>Zomato</strong> is a leading food delivery and restaurant discovery platform in India, founded in 2008. It connects millions of users with restaurants, cafes, and food outlets, allowing them to browse menus, read reviews, order food online, and track deliveries in real time.
+            </p>
+            <p class="timeline-text" style="margin-left:1.5em;">
+              By leveraging technology and data-driven solutions, Zomato optimizes delivery logistics, enhances user experience, and supports restaurant partners. Its focus on innovation has helped shape the food tech industry through efficient delivery systems, personalized recommendations, and robust analytics.
+            </p>
+          </div>
+            <div style="display: flex; align-items: center; margin: 1.5em 0;">
+            <img src="./assets/images/zomato.png" alt="Zomato Logo" style="max-width: 220px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); margin-left: 35%;">
+          </div>
           <div class="business-case-list">
             <!-- Business Case 1: Optimizing Delivery Routes -->
             <section class="business-case">
@@ -891,7 +902,7 @@
                 <li>We can also save/calculate popular routes in advance to make things even faster.</li>
                 </ul>
               <div style="text-align: center; margin-top: 1.5em;">
-                <a href="hyperlink" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
+                <a href="https://github.com/a9irudhh/aps-portfolio-code/blob/main/graphAlgo.cpp" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
                   <ion-icon name="logo-github" style="margin-right: 0.5em;"></ion-icon>
                   View Code
                 </a>
@@ -939,7 +950,7 @@
                 <li>ETA = 15 + 6 + 12 = <strong>33 minutes</strong></li>
               </ul>
               <div style="text-align: center; margin-top: 1.5em;">
-                <a href="hyperlink" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
+                <a href="https://github.com/a9irudhh/aps-portfolio-code/blob/main/minETA.cpp" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
                   <ion-icon name="logo-github" style="margin-right: 0.5em;"></ion-icon>
                   View Code
                 </a>
@@ -1059,7 +1070,7 @@
                 <li><strong>Efficient for up to hundreds of assignments in real-time batch processing.</strong></li>
               </ul>
               <div style="text-align: center; margin-top: 1.5em;">
-                <a href="hyperlink" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
+                <a href="https://github.com/a9irudhh/aps-portfolio-code/blob/main/assignmentProblem.cpp" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
                   <ion-icon name="logo-github" style="margin-right: 0.5em;"></ion-icon>
                   View Code
                 </a>
@@ -1124,7 +1135,7 @@
                 <li><strong>Very efficient for real-time operations even with 10,000+ items.</strong></li>
               </ul>
               <div style="text-align: center; margin-top: 1.5em;">
-                <a href="hyperlink" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
+                <a href="https://github.com/a9irudhh/aps-portfolio-code/blob/main/tries.cpp" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
                   <ion-icon name="logo-github" style="margin-right: 0.5em;"></ion-icon>
                   View Code
                 </a>
@@ -1190,7 +1201,7 @@
                 <li><strong>Scales smoothly even with second-wise tracking (n = 86400 slots/day).</strong></li>
               </ul>
               <div style="text-align: center; margin-top: 1.5em;">
-                <a href="hyperlink" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
+                <a href="https://github.com/a9irudhh/aps-portfolio-code/blob/main/fenwick.cpp" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
                   <ion-icon name="logo-github" style="margin-right: 0.5em;"></ion-icon>
                   View Code
                 </a>
@@ -1247,54 +1258,7 @@
                 <li>Optimizations possible to reduce space to O(min(m, n)) using rolling arrays.</li>
               </ul>
               <div style="text-align: center; margin-top: 1.5em;">
-                <a href="hyperlink" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
-                  <ion-icon name="logo-github" style="margin-right: 0.5em;"></ion-icon>
-                  View Code
-                </a>
-              </div>
-            </section>
-
-            <!-- Business Case 7: Enhancing Delivery Partner Ratings -->
-            <section class="business-case">
-              <h2 class="h2" style="margin-top: 2.5em;">7. Enhancing Delivery Partner Ratings</h2>
-              <h3 class="h3" style="margin-top:1em;">Problem</h3>
-              <ul class="timeline-text" style="margin-left:1.5em; list-style: disc inside;">
-                <li>Delivery partners often receive low ratings due to delays or incorrect orders.</li>
-                <li>Ratings directly impact their morale and future assignments.</li>
-                <li>We need a system to improve ratings and ensure fairness.</li>
-              </ul>
-              <h3 class="h3" style="margin-top:1em;">Why fix this?</h3>
-              <ul class="timeline-text" style="margin-left:1.5em; list-style: disc inside;">
-                <li>Higher ratings improve delivery partner satisfaction and retention.</li>
-                <li>Fair ratings ensure trust in the system.</li>
-                <li>Better ratings lead to improved customer satisfaction.</li>
-              </ul>
-              <h3 class="h3" style="margin-top:1em;">How do we solve it?</h3>
-              <ul class="timeline-text" style="margin-left:1.5em; list-style: disc inside;">
-                <li>Introduce a feedback system for customers to rate specific aspects like timeliness and order accuracy.</li>
-                <li>Use weighted averages to calculate overall ratings.</li>
-                <li>Provide training and incentives for delivery partners to improve performance.</li>
-              </ul>
-              <h3 class="h3" style="margin-top:1em;">What do we use?</h3>
-              <ul class="timeline-text" style="margin-left:1.5em; list-style: disc inside;">
-                <li>Feedback forms integrated into the app.</li>
-                <li>Algorithms to calculate weighted averages.</li>
-                <li>Data analytics to identify areas for improvement.</li>
-              </ul>
-              <h3 class="h3" style="margin-top:1em;">How it works</h3>
-              <ol class="timeline-text" style="margin-left:1.5em; list-style: decimal inside;">
-                <li>Customers rate delivery partners after each order.</li>
-                <li>Ratings are categorized into timeliness, accuracy, and overall satisfaction.</li>
-                <li>Weighted averages are calculated to determine the final rating.</li>
-                <li>Delivery partners receive feedback and training based on ratings.</li>
-              </ol>
-              <h3 class="h3" style="margin-top:1em;">Performance (Time and Space Complexity)</h3>
-              <ul class="timeline-text" style="margin-left:1.5em; list-style: disc inside;">
-                <li>Time Complexity: O(n) for calculating averages, where n is the number of ratings.</li>
-                <li>Space Complexity: O(n) for storing ratings and feedback.</li>
-              </ul>
-              <div style="text-align: center; margin-top: 1.5em;">
-                <a href="hyperlink" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
+                <a href="https://github.com/a9irudhh/aps-portfolio-code/blob/main/lcs.cpp" class="button" style="display: inline-flex; align-items: center; background-color: #333; color: #fff; padding: 0.5em 1em; border-radius: 4px; text-decoration: none;">
                   <ion-icon name="logo-github" style="margin-right: 0.5em;"></ion-icon>
                   View Code
                 </a>
